# shell_scripting_shootout

./: .dockerignore  .gitignore  README.md  containers.md
.github/workflows/: ci.yml
docs/: benchmark-design.md  live-github.md  native-toolchains.md  research.md  rust-runners.md
fixtures/: README.md  git-input.json  pure-input.json
fixtures/expected/: git-output.json  pure-output.json
harness/: benchmark.py  collect_github.py  conformance.py  containers.py  create_git_fixture.py  create_large_fixture.py  host_environment.py  proxy_bridge.py  reference_plan.py  source_metrics.py  update_goldens.py
harness/tests/: test_collect_github.py  test_source_metrics.py
implementations/d/: .gitignore  Containerfile  README.md  pr-plan  pr_plan.d  test.sh
implementations/go/: Containerfile  README.md  git.go  git_test.go  go.mod  main.go  model.go  planner.go  planner_test.go  pr-plan  render.go  render_test.go  validate.go  validate_test.go
implementations/ocaml/: .ocamlformat  Containerfile  README.md  dune-project  pr-plan  pr_plan.opam
implementations/ocaml/src/: decode.ml  dune  git_analysis.ml  main.ml  model.ml  planner.ml  render.ml
implementations/ocaml/test/: dune  test_pr_plan.ml
implementations/python/: Containerfile  README.md  pr-plan  pyproject.toml  requirements-dev.txt
implementations/python/pr_plan/: __init__.py  __main__.py  cli.py  git_analysis.py  model.py  planner.py  render.py  validation.py
implementations/python/tests/: __init__.py  helpers.py  test_git_analysis.py  test_planner.py  test_render_cli.py  test_validation.py
(+91 files in other folders)
