opam-version: "2.0"
synopsis: "OCaml pr-plan benchmark candidate"
depends: [
  "ocaml" {>= "5.2"}
  "dune" {>= "3.16"}
  "astring" {>= "0.8.5"}
  "bos" {>= "0.3.0"}
  "cmdliner" {>= "1.3.0"}
  "fpath" {>= "0.7.3"}
  "ptime" {>= "1.2.0"}
  "rresult" {>= "0.7.0"}
  "yojson" {>= "2.2.2"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]

